SLING-12218 - Limit queue size (#132)
* SLING-12218 - Limit queue size

* SLING-12218 - Limit queue size

* SLING-12218 - Delay when we are near queue size limit

* SLING-12218 - Fix test

* SLING-12218 - Add test